unpackaged/main/default/objects/litify_pm__Role_View_Type__mdt/litify_pm__Role_View_Type__mdt.object-meta.xml
<CustomObject>
    <description>Used to define up to 2 fields to show in the roles hierarchical list based upon the role type.</description>
    <label>Role View Type</label>
    <pluralLabel>Role View Types</pluralLabel>
</CustomObject>