unpackaged/main/default/objects/litify_pm__Role_View_Type__mdt/fields/litify_pm__Party_Field_1__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party_Field_1__c</fullName>
    <description>Field that holds API value of a party or role field</description>
    <label>Party Field 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>