unpackaged/main/default/objects/litify_pm__Role_View_Type__mdt/fields/litify_pm__Party_Field_4__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party_Field_4__c</fullName>
    <label>Party Field 4</label>
    <length>150</length>
    <type>Text</type>
</CustomField>