unpackaged/main/default/objects/litify_pm__Role_View_Type__mdt/fields/litify_pm__Role_View__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Role_View__c</fullName>
    <label>Role View</label>
    <referenceTo>litify_pm__Role_View__mdt</referenceTo>
    <relationshipLabel>Role View Types</relationshipLabel>
    <relationshipName>Role_View_Types</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>