unpackaged/main/default/objects/litify_pm__Role_View_Type__mdt/fields/litify_pm__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Type__c</fullName>
    <label>Type (API Name)</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>